Imlpementación de vista de lista de categorías

--- a/Android/Meals/app/src/main/res/values/strings.xml
+++ b/Android/Meals/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Meals</string>
+    <string name="mealCategories_title">Meal Categories</string>
 </resources>
