--- a/Android/Notes/app/src/main/res/values/strings.xml
+++ b/Android/Notes/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="list_title">Notas</string>
+    <string name="list_empty_txt">Sin notas</string>
 </resources>
