Implementación de pantalla de detalle de nota

--- a/Android/Notes/app/src/main/res/values/strings.xml
+++ b/Android/Notes/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="list_title">Notas</string>
     <string name="list_empty_txt">Sin notas</string>
     <string name="add_note">Agregar nota</string>
+    <string name="title">Título</string>
+    <string name="title_placeholder">Título de la nota</string>
+    <string name="content">Contenido</string>
+    <string name="content_placeholder">Escriba aquí el contenido de la nota</string>
+    <string name="save">Guardar</string>
 </resources>
